--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "astro": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sharp": "^0.33.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
